# vosCall

./: .gitignore  CMakeLists.txt  Dockerfile.service  README.md
apps/admin-api/: CMakeLists.txt
apps/admin-api/src/: main.cpp
common/: CMakeLists.txt
common/include/common/: auth.hpp  env.hpp  log.hpp  pg.hpp  redis.hpp
common/src/: env.cpp  log.cpp  pg.cpp  redis.cpp
deploy/: README.md  docker-compose.yml
deploy/opensips/: opensips.cfg
deploy/prometheus/: prometheus.yml
deploy/rtpengine/: rtpengine.conf
migrations/clickhouse/: 001_cdr_schema.sql
migrations/postgres/: 001_schema.sql  002_constraints.sql  003_billing_extensions.sql  004_ops_jobs.sql  005_audit_helpers.sql
openapi/: openapi.yaml
protos/: CMakeLists.txt  auth.proto  billing.proto  cdr.proto  observe.proto  route.proto
scripts/: fetch_e164.sh  fetch_ecb_fx.sh  fetch_iso4217.sh  load_currencies.sql  load_e164.sql  load_fx.sql
services/auth-svc/: CMakeLists.txt
services/auth-svc/include/: auth_service_impl.hpp
services/auth-svc/src/: auth_service_impl.cpp  main.cpp
services/billing-svc/: CMakeLists.txt
services/billing-svc/include/: billing_service_impl.hpp
services/billing-svc/src/: billing_service_impl.cpp  main.cpp
services/cdr-svc/: CMakeLists.txt
services/cdr-svc/include/: cdr_ingest_impl.hpp
services/cdr-svc/src/: cdr_ingest_impl.cpp  main.cpp
services/jobs-svc/: CMakeLists.txt
services/jobs-svc/src/: main.cpp
services/observe-svc/: CMakeLists.txt
services/observe-svc/include/: observe_ingest_impl.hpp
services/observe-svc/src/: main.cpp  observe_ingest_impl.cpp
services/route-svc/: CMakeLists.txt
services/route-svc/include/: route_service_impl.hpp
services/route-svc/src/: main.cpp  route_service_impl.cpp
tools/loader/: CMakeLists.txt
tools/loader/src/: main.cpp
